--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webview-plus",
-  "version": "2.2.0",
+  "version": "2.3.1",
   "description": "Uniform webview on any Android 4.x device..",
   "main": "index.js",
   "repository": {
@@ -19,6 +19,9 @@
   "contributors": [
     {
       "name": "Imanol Fernandez Gorostizaga"
+    },
+    {
+      "name": "Txus Ordorika From Ludei"
     }
   ],
   "bugs": {
